<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:textSize="22sp"
            android:textColor="@color/gray_100"
            android:lineHeight="30dp"
            android:text="@string/add_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggest_help_1"
            android:textSize="18sp"
            android:layout_marginTop="30dp" />

        <RadioGroup android:id="@+id/radio_group_subject_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <RadioButton android:id="@+id/radio_retailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/title_retailers"
                android:textSize="18sp" />
            <RadioButton android:id="@+id/radio_brands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/title_brands"
                android:layout_marginStart="20dp"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/suggest_form_name"
            android:hint="@string/suggest_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/suggest_form_user_name"
            android:hint="@string/suggest_form_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/suggest_form_email_address"
            android:hint="@string/suggest_form_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:autofillHints="emailAddress" />

        <Button
            android:id="@+id/button_suggest_subject_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/wallet_dark_blue"
            android:textSize="18sp"
            android:text="@string/suggest_form_send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
