<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:layout_weight="1"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="10dp"
            android:minWidth="10dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textViewSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageViewDiversityScore"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/topic_diversity"
                    app:srcCompat="@drawable/shield_24px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/topic_diversity" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageViewEnvironmentalScore"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/topic_environment"
                    app:srcCompat="@drawable/shield_24px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/topic_environment" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageViewUnionScore"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/topic_unions"
                    app:srcCompat="@drawable/shield_24px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/topic_unions" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageViewPoliticsScore"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/topic_politics"
                    app:srcCompat="@drawable/shield_24px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/topic_politics" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_suggest_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/wallet_dark_blue"
            android:textSize="18sp"
            android:text="@string/title_suggest_score" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    android:background="@color/gray_100"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:text="@string/title_dei"
                    android:layout_marginBottom="5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/diversity_scores_recycler_view"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    android:background="@color/gray_100"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:text="@string/title_environment"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/environmental_scores_recycler_view"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    android:background="@color/gray_100"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:text="@string/title_unions"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/unions_scores_recycler_view"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="16sp"
                    android:background="@color/gray_100"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:text="@string/title_politics"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/politics_scores_recycler_view"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="40dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_marginEnd="@dimen/fab_margin"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:contentDescription="TODO"-->
<!--        app:srcCompat="@drawable/add_24px"-->
<!--        tools:ignore="MissingConstraints" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
